# wwsynth

./: CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt  aaf.cpp  aaf.h  audio_system.cpp  audio_system.h  banks.cpp  banks.h  disassembler.cpp  freq_table.h  instrument.cpp  instrument.h  main.cpp  player.cpp  recorder.cpp  util.cpp  util.h
src/audio/: audio_out.cpp  audio_out.h
src/common/: CMakeLists.txt  inst.h  wave.h
src/seq/: parser.cpp  parser.h  track.cpp  track.h
